fix footer on bottom on mobile

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -417,8 +417,8 @@ a.nav-link:hover {
 	}
 }
 
-@media only screen and (min-width: 400px) and (orientation: landscape) {
+@media only screen and (max-height: 400px) {
 	#footer {
-		display: none;
+		position: initial;
 	}
 }
